<resources>
    <string name="app_name">Music Editor</string>
    <string name="error_deffault_title">Error</string>
    <string name="app_name_folder" translatable="false">MusicEditor_V1</string>

    <!--Home-->
    <string name="music_editor">Music editor</string>
    <string name="trim_audio">Trim Audio</string>
    <string name="trummed">Trummed</string>
    <string name="merged">Merged</string>
    <string name="des_trim_audio">Fast and accurate audio cutting</string>
    <string name="merge_audio">Merge Audio</string>
    <string name="des_merge_audio">Fast and accurate audio cutting</string>
    <string name="video_converter">Video Converter</string>
    <string name="des_video_converter">Fast and accurate audio cutting</string>
    <string name="my_folder">My Folder</string>
    <string name="des_my_folder">Fast and accurate audio cutting</string>
    <string name="other">Other</string>

    <!--Home other option-->
    <string name="audio_converter">Audio Converter</string>
    <string name="mix">Mix</string>
    <string name="split">Split</string>
    <string name="remove_part">Remove Part</string>
    <string name="mute_path">Mute Part</string>
    <string name="volume">Volume</string>
    <string name="speed">Speed</string>
    <string name="compress">Compress</string>
    <string name="reverse">Reverse </string>

    <!--Base Command-->
    <string name="progress_value">%1$d%% (%2$ds)</string>

    <!--Select Audio-->
    <string name="select_audio">Select Audio</string>
    <string name="search">Search</string>
    <string name="empty_audio_file">No audio files available</string>
    <string name="no_result_found">No results found</string>
    <string name="choose">Choose (%1$d)</string>

    <!--Trim-->
    <string name="start">Start</string>
    <string name="selected">Selected</string>
    <string name="end">End</string>
    <string name="name_is_empty">The name is empty</string>
    <string name="txt_0_00">00:00</string>
    <string name="trim_only_play_selected">Only play selected part</string>
    <string name="audio_comma">, </string>
    <string name="audio_hz"> Hz, </string>
    <string name="audio_kbps"> kbps</string>

    <string name="selected_time">Selected: %s</string>

    <!--Merge Audio-->
    <string name="audio_selected">Audio is Selected</string>
    <string name="mes_delete_audio">Do you want to delete this file?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="music_name">Music name</string>
    <string name="file_name">File Name</string>

    <!--Video Converter-->
    <string name="select_video">Select Video</string>
    <string name="select_output_format">Select output format</string>


    <!--Mix-->
    <string name="audio_is_selected">Audio is Selected</string>
    <string name="preview_audio">Preview Audio</string>
    <string name="now_playing">Now Playing</string>

    <!--Compress-->
    <string name="channel">Channel</string>
    <string name="bitrate">Bitrate</string>
    <string name="sample_rate">Sample Rate</string>

    <!--Speed-->
    <string name="speed_booster">Speed Booster</string>
    <string name="output_speed">Output Speed</string>

    <!--Volume-->
    <string name="volume_booster">Volume Booster</string>
    <string name="output_volume">Output Volume</string>"

    <!--My Folder-->
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="title_delete_file">Do you want to deletethe file?</string>


    <!--Split-->
    <string name="part_1">Part 1</string>
    <string name="part_2">Part 2</string>

    <!--Msg Error-->
    <string name="duration_sort">This audio duration too short .Please try another audio file !</string>
    <string name="duration_long">This audio duration too long .Please try another audio file !</string>
    <!--Language-->
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnam">VietNam</string>
    <string name="french">French</string>
    <string name="india">India</string>
    <string name="indonesia">Indonesia</string>
    <string name="japan">Japan</string>
    <string name="brazil">Brazil</string>
    <string name="korean">Korean</string>
    <string name="turkey">Turkey</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="apply">Apply</string>
    <string name="please_choose_language">Please choose language !</string>

    <string name="current_language">Current Language</string>
    <string name="all_language">All Languages</string>

    <!--Setting-->
    <string name="settings">Settings</string>
    <string name="rater_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy Policy</string>
    <string name="version">Version</string>

    <string name="total">Total</string>

    <!---->
    <string name="error">Error</string>

    <string name="contain_ads">( This action contain ads )</string>


    <!--Tutorial-->
    <string name="title_intro_1">Music Editing: Various types of music editing</string>
    <string name="title_intro_2">Conversion speed between audio and video: Fast, accurate</string>
    <string name="title_intro_3">File management Storing edited files: systematic</string>
    <string name="title_intro_4">Hi, Welcome to our Music Editor</string>
    <string name="content_intro_4">Wish you have a great experience!</string>
    <string name="next">Next</string>
    <string name="start_now">START NOW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>