<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_trim_audio"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_trim_audio"
        android:weightSum="10">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:adjustViewBounds="true"
            android:src="@drawable/img_trim_audio" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="3dp"
                android:text="@string/trim_audio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="6dp"
                android:layout_marginStart="3dp"
                android:padding="3dp"
                android:text="@string/des_trim_audio"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_merge_audio"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_merge_audio"
        android:weightSum="10">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:src="@drawable/img_merge_audio" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="4dp"
                android:text="@string/merge_audio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="6dp"
                android:layout_marginStart="3dp"
                android:padding="3dp"
                android:text="@string/des_merge_audio"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_video_converter"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_video_converter"
        android:weightSum="10">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:src="@drawable/img_video_converter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="4dp"
                android:text="@string/video_converter"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="6dp"
                android:layout_marginStart="3dp"
                android:padding="3dp"
                android:text="@string/des_video_converter"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_my_folder"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_my_folder"
        android:weightSum="10">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:src="@drawable/img_my_folder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="3dp"
                android:text="@string/my_folder"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="6dp"
                android:layout_marginStart="3dp"
                android:padding="3dp"
                android:text="@string/des_my_folder"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>