<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tutorial.FragmentIntro4">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_intro_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.example.base_project.base.BaseTextview
        android:id="@+id/baseTextview18"
        style="@style/txt_primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/title_intro_4"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView5"
        tools:ignore="MissingConstraints" />

    <com.example.base_project.base.BaseTextview
        android:id="@+id/baseTextview19"
        style="@style/txt_primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/content_intro_4"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseTextview18"
        tools:ignore="MissingConstraints" />

    <com.example.base_project.base.BaseTextview
        android:id="@+id/txt_start_now"
        style="@style/txt_primary"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_applied"
        android:gravity="center"
        android:text="@string/start_now"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseTextview19"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>