<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_margin="20dp"
    android:background="@drawable/bg_white_12_radius"
    android:elevation="0dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="10">

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:padding="10dp"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="10">

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="7"
                android:padding="10dp"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="10">

            <com.example.base_project.base.BaseTextview
                style="@style/txt_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="7"
                android:padding="10dp"
                android:text="@string/details"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:src="@drawable/ic_detail" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>